VID-60: Update spring boot to 3.2.4